--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "prettier": "^3.7.4",
     "tsx": "^4.21.0",
     "typescript": "~5.9.3",
