--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.2.1",
     "input-otp": "^1.4.2",
     "isbot": "^5.1.32",
     "lucide-react": "^0.562.0",
@@ -42,6 +43,7 @@
     "@dazl/dev": "^1.4.0",
     "@react-router/dev": "^7.11.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.6",
     "@types/node": "22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
